--- a/ui/assets/css/main.css
+++ b/ui/assets/css/main.css
@@ -16,15 +16,6 @@ header h1 {
 	padding: 0;
 }
 
-#terminal-container {
-	position: absolute;
-	top: 30px;
-	left: 0;
-	right: 0;
-	bottom: 30px;
-	box-sizing: border-box;
-}
-
 footer {
 	position: absolute;
 	bottom: 0px;
@@ -39,13 +30,19 @@ footer {
 	box-sizing: border-box;
 }
 
+
+#terminal-container {
+	background: black;
+	position: absolute;
+	top: 30px;
+	left: 0;
+	right: 0;
+	bottom: 30px;
+	box-sizing: border-box;
+	padding: 2px 4px;
+}
+
 .terminal {
 	font-family: "Go Mono", monospace;
 	font-size: 12px;
-}
-
-.terminal,
-.terminal .xterm-viewport {
-	background-color: #fff;
-	color: #000;
 }
